@@ -20,7 +20,7 @@
 gnulib_modules="
     acl alloca extensions getline getopt gettext memchr memcmp memmove \
     mkstemp obstack pathmax snprintf stdbool stat-macros \
-    strerror strverscmp unlocked-io verify"
+    strerror strverscmp unlocked-io vasnprintf verify"
 
 SKIP_PO=t
 checkout_only_file=
