@@ -13,11 +13,13 @@ AC_SUBST(SED_FEATURE_VERSION)
 
 AC_PROG_CC
 gl_DISABLE_THREADS
+AC_USE_SYSTEM_EXTENSIONS
+AC_GNU_SOURCE
 gl_EARLY
-AC_ISC_POSIX
 AC_SYS_LARGEFILE
 AC_SYS_LONG_FILE_NAMES
 
+gl_INIT
 AC_CACHE_CHECK([whether -lcP is needed], [sed_cv_libcp_needed], [
 AC_TRY_RUN([
 #include <stdio.h>
@@ -52,9 +54,9 @@ AC_FUNC_VPRINTF
 AM_GNU_GETTEXT_VERSION(0.15)
 AM_GNU_GETTEXT(no-libtool, need-ngettext, ../intl)
 
-gl_INIT
-AC_CHECK_FUNCS_ONCE(isatty bcopy bzero isascii memcpy memset strchr strtoul popen \
-		    pathconf isblank fchown fchmod setlocale wcrtomb wcscoll btowc)
+AC_CHECK_FUNCS_ONCE(isatty bcopy bzero isascii memcpy memset strchr strtoul
+		    popen pathconf isblank fchown fchmod setlocale wcrtomb
+		    wcscoll btowc)
 
 AC_ARG_ENABLE(pcregrep,
 [  --enable-pcregrep       build the pcregrep test program],
