@@ -1,13 +1,13 @@
 acl-internal.h
-acl.c
 acl.h
 acl_entries.c
 alloca.c
 alloca.h
 alloca.in.h
-alloca_.h
 asnprintf.c
-config.charset
+copy-acl.c
+errno.h
+errno.in.h
 error.c
 error.h
 exitfail.c
@@ -16,21 +16,17 @@ file-has-acl.c
 float+.h
 float.h
 float.in.h
-float_.h
 getdelim.c
 getline.c
 getopt.c
 getopt.h
 getopt.in.h
 getopt1.c
-getopt_.h
 getopt_int.h
 gettext.h
 gettimeofday.c
 gnulib.mk
 intprops.h
-localcharset.c
-localcharset.h
 memchr.c
 memcmp.c
 memmove.c
@@ -47,23 +43,18 @@ quote.h
 quotearg.c
 quotearg.h
 realloc.c
-ref-add.sin
-ref-del.sin
+set-mode-acl.c
 size_max.h
 snprintf.c
 stat-macros.h
 stdbool.h
 stdbool.in.h
-stdbool_.h
 stdint.h
 stdint.in.h
-stdint_.h
 stdio.h
 stdio.in.h
-stdio_.h
 stdlib.h
 stdlib.in.h
-stdlib_.h
 strerror.c
 string.h
 string.in.h
@@ -71,25 +62,20 @@ strverscmp.c
 sys
 sys_stat.h
 sys_stat.in.h
-sys_stat_.h
 sys_time.h
 sys_time.in.h
-sys_time_.h
 tempname.c
 tempname.h
 unistd.h
 unistd.in.h
-unistd_.h
 unlocked-io.h
 vasnprintf.c
 vasnprintf.h
 verify.h
 wchar.h
 wchar.in.h
-wchar_.h
 wctype.h
 wctype.in.h
-wctype_.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
